# repro

./: CMakeLists.txt  main.cpp
